--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -68,22 +68,25 @@
 
           <div class="container-2">
 
-            <img class="rounded-circle"
-              src="file:///F:/FrontEndMentorChallange4/github-user-search-app/starter-code/assets/Bitmap.svg"
-              alt="Bitmap Image">
+              <img class="rounded-circle br-checkpoint"
+                src="file:///F:/FrontEndMentorChallange4/github-user-search-app/starter-code/assets/Bitmap.svg"
+                alt="Bitmap Image">
 
             <div class="sm-flex-container">
-              <div class="octocat h2 d-md-flex ml-md-2"> The Octocat <span class="update ml-auto">Joined <dfn>25/6/1978</dfn>
+              <div class="octocat h2 d-md-flex ml-md-2"> The Octocat <span class="update ml-auto">Joined
+                  <dfn>25/6/1978</dfn>
                 </span></div>
               <div class="octocat-update ml-md-2"> @Octocat </div>
-              <div class="lor-content ml-md-3 mt-md-3 d-none d-md-inline-block"> Lorem ipsum dolor sit amet, consectetuer
+              <div class="lor-content ml-md-3 mt-md-3 d-none d-md-inline-block"> Lorem ipsum dolor sit amet,
+                consectetuer
                 adipiscing elit. Donec odio.
                 Quisque
                 volutpat mattis eros.</div>
 
             </div>
 
-            <div class="lor-content d-md-none d-inline-block mt-2 ml-4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+            <div class="lor-content d-md-none d-inline-block mt-4 ml-md-4">Lorem ipsum dolor sit amet, consectetuer
+              adipiscing elit.
               Donec odio.
               Quisque
               volutpat mattis eros</div>
@@ -98,7 +101,7 @@
 
       </div>
 
-      <div class="d-flex w-75 desc-lst-row justify-content-between ml-0 ml-md-auto">
+      <div class="d-flex desc-lst-row justify-content-between ml-0 ml-md-auto">
 
         <span class="profile-info"> Repos <span id="repo" class="d-block">8</span> </span>
         <span class="profile-info"> Followers <span id="followers" class="d-block">1908</span> </span>
