Added toggle changes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,8 +29,7 @@
 
       <span id="light-dark-switch">
         <span class="version-lg">Light</span> <span class="version-dk">Dark</span>
-        <img src="file:///F:/FrontEndMentorChallange4/github-user-search-app/starter-code/assets/icon-moon.svg"
-          alt="dark-icon" class="img-fluid js-split">
+        <img alt="dark-icon" class="img-fluid js-split icon-src">
       </span>
 
     </div>
@@ -70,9 +69,10 @@
               alt="Bitmap Image">
 
             <div class="sm-flex-container">
-              <div class="octocat h2 d-md-flex ml-md-3"> The Octocat <span class="update ml-auto">Joined
-                  <dfn>25/6/2021</dfn>
-                </span></div>
+              <div class="octocat h2 d-md-flex ml-md-3"> The Octocat</div>
+              <span class="update ml-auto">Joined
+                <dfn>25/6/2021</dfn>
+              </span>
               <div class="octocat-update ml-md-3"> @Octocat </div>
               <div class="lor-content ml-md-3 mt-md-3 d-none d-md-inline-block"> Lorem ipsum dolor sit amet,
                 consectetuer
