--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 fill="#4b6a9b" />
             </svg>
 
-            <span>San Francisco</span>
+            <span class="footer-info">San Francisco</span>
 
           </div>
 
@@ -127,7 +127,7 @@
                 fill="#4b6a9b" />
             </svg>
 
-            <span>Not Available</span>
+            <span class="footer-info">Not Available</span>
 
           </div>
 
@@ -135,7 +135,7 @@
 
         <div class="d-flex flex-md-row flex-column justify-content-md-around">
 
-          <div class="ft-font-sizing ft-line-height mt-2">
+          <div class="ft-font-sizing ft-line-height ml-md-2 mt-2">
 
             <svg class="svg-footer-img" height="20" width="20" xmlns="http://www.w3.org/2000/svg">
               <g fill="#4b6a9b">
@@ -146,11 +146,11 @@
               </g>
             </svg>
 
-            <span>https://github.blog</span>
+            <span class="footer-info">https://github.blog</span>
 
           </div>
 
-          <div class="ft-font-sizing mt-2">
+          <div class="ft-font-sizing mr-md-5 mt-2">
 
             <svg class="svg-footer-img" height="20" width="20" xmlns="http://www.w3.org/2000/svg">
               <g fill="#4b6a9b">
@@ -159,7 +159,7 @@
               </g>
             </svg>
 
-            <span>@github</span>
+            <span class="footer-info">@github</span>
 
           </div>
 
