Added some tweaks

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="input-group">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">
-            <img src="file:///F:/FrontEndMentorChallange4/github-user-search-app/starter-code/assets/icon-search.svg"
+            <img src="file:///F:/FrontEndMentorChallange4/github-user-search-app/assets/icon-search.svg"
               alt="search-icon">
           </span>
         </div>
@@ -64,8 +64,8 @@
 
           <div class="container-2">
 
-            <img class="rounded-circle br-checkpoint"
-              src="file:///F:/FrontEndMentorChallange4/github-user-search-app/starter-code/assets/Bitmap.svg"
+            <img class="rounded-circle br-checkpoint img-fluid"
+              src="file:///F:/FrontEndMentorChallange4/github-user-search-app/assets/Bitmap.svg"
               alt="Bitmap Image">
 
             <div class="sm-flex-container">
