Added major changes related to css grid positioning

--- a/index.html
+++ b/index.html
@@ -69,32 +69,26 @@
               alt="Bitmap Image">
 
             <div class="sm-flex-container">
-              <div class="octocat h2 d-md-flex ml-md-3"> The Octocat</div>
+              <div class="octocat h2 d-lg-flex ml-lg-3"> The Octocat</div>
               <span class="update ml-auto">Joined
                 <dfn>25/6/2021</dfn>
               </span>
-              <div class="octocat-update ml-md-3"> @Octocat </div>
-              <div class="lor-content ml-md-3 mt-md-3 d-none d-md-inline-block"> Lorem ipsum dolor sit amet,
-                consectetuer
-                adipiscing elit. Donec odio.
-                Quisque
-                volutpat mattis eros.</div>
+              <div class="octocat-update ml-lg-3"> @octocat </div>
 
             </div>
 
-            <div class="lor-content d-md-none d-inline-block mt-4 ml-md-4">Lorem ipsum dolor sit amet, consectetuer
+            <div class="lor-content mt-4 ml-lg-3">Lorem ipsum dolor sit amet, consectetuer
               adipiscing elit.
               Donec odio.
               Quisque
               volutpat mattis eros</div>
-
           </div>
 
         </div>
 
       </div>
 
-      <div class="d-flex desc-lst-row justify-content-between ml-0 ml-md-auto">
+      <div class="d-flex desc-lst-row justify-content-between ml-0 ml-lg-auto">
 
         <span class="profile-info"> Repos <span id="repo" class="d-block">8</span> </span>
         <span class="profile-info"> Followers <span id="followers" class="d-block">1908</span> </span>
@@ -103,9 +97,9 @@
       </div>
 
 
-      <footer class="d-flex flex-column w-100 text-md-center mr-auto mr-md-0">
+      <footer class="d-flex flex-column w-100 text-lg-center mr-auto mr-lg-0">
 
-        <div class="d-flex flex-md-row flex-column justify-content-md-around">
+        <div class="d-flex flex-lg-row flex-column justify-content-lg-around">
 
           <div class="ft-font-sizing mt-2">
 
@@ -133,9 +127,9 @@
 
         </div>
 
-        <div class="d-flex flex-md-row flex-column justify-content-md-around">
+        <div class="d-flex flex-lg-row flex-column justify-content-lg-around">
 
-          <div class="ft-font-sizing ft-line-height ml-md-2 mt-2">
+          <div class="ft-font-sizing ft-line-height ml-lg-2 mt-2">
 
             <svg class="svg-footer-img" height="20" width="20" xmlns="http://www.w3.org/2000/svg">
               <g fill="#4b6a9b">
@@ -146,11 +140,11 @@
               </g>
             </svg>
 
-            <span class="footer-info">https://github.blog</span>
+            <a class="footer-info" href="https://github.blog">https://github.blog</a>
 
           </div>
 
-          <div class="ft-font-sizing mr-md-5 mt-2">
+          <div class="ft-font-sizing mr-lg-5 mt-2">
 
             <svg class="svg-footer-img" height="20" width="20" xmlns="http://www.w3.org/2000/svg">
               <g fill="#4b6a9b">
