Added moon image source

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <span id="light-dark-switch">
         <span class="version-lg">Light</span> <span class="version-dk">Dark</span>
-        <img alt="dark-icon" class="img-fluid js-split icon-src">
+        <img alt="dark-icon" src="./assets/icon-moon.svg" class="img-fluid js-split icon-src">
       </span>
 
     </div>
