Added a small tweak to the joining date

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
             <div class="sm-flex-container">
               <div class="octocat h2 d-lg-flex ml-lg-3"> The Octocat</div>
-              <span class="update ml-auto">Joined
-                <dfn>25/6/2021</dfn>
+              <span class="update ml-lg-auto">Joined
+                <dfn class="joining">25/6/2021</dfn>
               </span>
               <div class="octocat-update ml-lg-3"> @octocat </div>
 
