Added more info related to lorem ipsum content height

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       <div class="input-group">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">
-            <img src="./assets/icon-search.svg"
-              alt="search-icon">
+            <img src="./assets/icon-search.svg" alt="search-icon">
           </span>
         </div>
 
@@ -64,9 +63,7 @@
 
           <div class="container-2">
 
-            <img class="rounded-circle br-checkpoint img-fluid"
-              src="./assets/Bitmap.svg"
-              alt="Bitmap Image">
+            <img class="rounded-circle br-checkpoint img-fluid" src="./assets/Bitmap.svg" alt="Bitmap Image">
 
             <div class="sm-flex-container">
               <div class="octocat h2 d-lg-flex ml-lg-3"> The Octocat</div>
@@ -77,7 +74,8 @@
 
             </div>
 
-            <div class="lor-content mt-4 ml-lg-3">Lorem ipsum dolor sit amet, consectetuer
+            <div class="lor-content mt-4 ml-lg-3 pb-4">
+              Lorem ipsum dolor sit amet, consectetuer
               adipiscing elit.
               Donec odio.
               Quisque
@@ -97,7 +95,7 @@
       </div>
 
 
-      <footer class="d-flex flex-column w-100 text-lg-center mr-auto mr-lg-0">
+      <footer class="d-flex flex-column w-100 text-lg-center mr-auto mr-lg-0 pt-4">
 
         <div class="d-flex flex-lg-row flex-column justify-content-lg-around">
 
