Added a little tweak to settle some issues

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
           <div class="container-2">
 
-            <img class="rounded-circle br-checkpoint img-fluid" src="./assets/Bitmap.svg" alt="Bitmap Image">
+            <img class="rounded-circle br-checkpoint img-fluid" style="justify-self: center;" src="./assets/Bitmap.svg"
+              alt="Bitmap Image">
 
             <div class="sm-flex-container">
               <div class="octocat h2 d-lg-flex ml-lg-3"> The Octocat</div>
