Added some changes to the JS code to display no results

--- a/index.html
+++ b/index.html
@@ -46,15 +46,16 @@
         <input type="text" class="form-control form-control-sm" placeholder="Search GitHub username..."
           aria-label="Username" aria-describedby="basic-addon1">
 
+        <span class="input-group-text no-result d-no-rel" style="font-size: .70rem; color: red;">No results</span>
+
         <div class="input-group-append">
           <span class="input-group-text btn-js"><a class="btn btn-primary btn-sm" href="">Search</a></span>
         </div>
       </div>
 
-
-
     </div>
 
+    
     <div class="group-1 last-row p-4">
 
       <div class="d-flex w-100 lorem-height">
