Added the changes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="sm-flex-container">
               <div class="octocat h2 d-lg-flex ml-lg-3"> The Octocat</div>
               <span class="update ml-lg-auto">Joined
-                <dfn class="joining">25/6/2021</dfn>
+                <dfn class="joining">25 Jun 2021</dfn>
               </span>
               <div class="octocat-update ml-lg-3"> @octocat </div>
 
@@ -97,7 +97,7 @@
       </div>
 
 
-      <footer class="d-flex flex-column w-100 text-lg-center mr-auto mr-lg-0 pt-4">
+      <footer class="d-flex flex-column w-100 mr-auto mr-lg-0 pt-4">
 
         <div class="d-flex flex-lg-row flex-column justify-content-lg-around">
 
